Add our findings chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -188,7 +188,7 @@
 @misc{gitea2020web,
   title={{Gitea}},
   year={2020},
-  howpublished={\url{https://gitea.com/}}
+  howpublished={\url{https://gitea.io/}}
 }
 
 @misc{vault2020github,
@@ -246,4 +246,111 @@
   title={{tui-rs}},
   year={2020},
   howpublished={\url{https://github.com/fdehau/tui-rs/}}
+}
+
+@misc{doom2020github,
+  title={{RESTful-DOOM}},
+  year={2020},
+  howpublished={\url{https://github.com/jeff-1amstudios/restful-doom/}}
+}
+
+@misc{raml2020web,
+  title={{RAML}},
+  howpublished={\url{https://raml.org/}}
+}
+
+@misc{vaultissue11304github,
+  title={{Vault issue \#11304}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11304}}}
+}
+
+@misc{vaultissue11306github,
+  title={{Vault issue \#11306}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11306}}}
+}
+
+@misc{vaultissue11308github,
+  title={{Vault issue \#11308}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11308}}}
+}
+
+@misc{vaultissue11310github,
+  title={{Vault issue \#11310}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11310}}}
+}
+
+@misc{vaultissue11311github,
+  title={{Vault issue \#11311}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11311}}}
+}
+
+@misc{vaultissue11313github,
+  title={{Vault issue \#11313}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11313}}}
+}
+
+@misc{vaultissue11314github,
+  title={{Vault issue \#11314}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11314}}}
+}
+
+@misc{vaultissue11315github,
+  title={{Vault issue \#11315}},
+  year={2021},
+  howpublished={\url{https://github.com/hashicorp/vault/issues/11315}}}
+}
+
+@misc{vault2021web,
+  title={{HashiCorp Vault}},
+  year={2021},
+  howpublished={\url{https://www.hashicorp.com/products/vault}}}
+}
+
+@misc{giteaissue15346github,
+  title={{Gitea issue \#15346}},
+  year={2021},
+  howpublished={\url{https://github.com/go-gitea/gitea/issues/15346}}}
+}
+
+@misc{giteaissue15357github,
+  title={{Gitea issue \#15357}},
+  year={2021},
+  howpublished={\url{https://github.com/go-gitea/gitea/issues/15357}}}
+}
+
+@misc{giteaissue15356github,
+  title={{Gitea issue \#15356}},
+  year={2021},
+  howpublished={\url{https://github.com/go-gitea/gitea/issues/15356}}}
+}
+
+@misc{k8sissue101355github,
+  title={{Kubernetes issue \#101355}},
+  year={2021},
+  howpublished={\url{https://github.com/kubernetes/kubernetes/issues/101355}}}
+}
+
+@misc{k8sissue101350github,
+  title={{Kubernetes issue \#101350}},
+  year={2021},
+  howpublished={\url{https://github.com/kubernetes/kubernetes/issues/101350}}}
+}
+
+@misc{k8sissue101348github,
+  title={{Kubernetes issue \#101348}},
+  year={2021},
+  howpublished={\url{https://github.com/kubernetes/kubernetes/issues/101348}}}
+}
+
+@misc{k8s2021web,
+  title={{Kubernetes}},
+  year={2021},
+  howpublished={\url{https://kubernetes.io/}}}
 }
