--- a/main.tex
+++ b/main.tex
@@ -9,9 +9,9 @@
 \usepackage[outputdir=build]{minted}
 \usepackage{subfigure}
 \usepackage{graphicx}
+\usepackage[justification=centering]{caption}
 \usemintedstyle{friendly}
 \graphicspath{ {./images/} }
-
 \linespread{1.25} % hodnota 1.25 by mala zodpovedat 1.5 riadkovaniu
 \setcounter{tocdepth}{3}
 
