Add Future work section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -354,3 +354,10 @@
   year={2021},
   howpublished={\url{https://kubernetes.io/}}}
 }
+
+@misc{kartz2019bypass,
+  title={Bypassing GitHub's OAuth flow},
+  author={Teddy Katz},
+  year={2019},
+  howpublished={\url{https://blog.teddykatz.com/2019/11/05/github-oauth-bypass.html}}
+}
