--- a/introduction-to-fuzzing.tex
+++ b/introduction-to-fuzzing.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction to fuzzing}
+\chapter{Fuzzing 101}
 \label{cha:Introduction to fuzzing}
 The issue of providing production-grade software was there from the inception of software engineering. Engineers used numerous testing methods to achieve the desired quality. Most widely used testing methods were unit testing and integration testing.
 
